# canvas-course-tools

./: .gitignore  CHANGELOG.md  README.md  README.rst  environment.yml  pyproject.toml
scripts/: list_files.py  list_folders.py  list_pages.py  markdown_pages.py  testdoc.md  upload_file.py  upload_page.py
src/amsphyslab_course_tools/: cli.py
src/canvas_course_tools/: __init__.py  canvas_tasks.py  cli.py  configfile.py  courses.py  datatypes.py  group_lists.py  groups.py  markdown_pages.py  servers.py  students.py  templates.py  testdoc.md  utils.py
src/canvas_course_tools/templates/: exam.tex  list-students.txt  peer-feedback.tex  photos.tex  signatures.tex  student-list-pairs.tex  student-list.tex  student-list.txt  template-info.toml
tests/: test_amsphyslab_course_tools.py  test_api.py  test_canvas_course_tools.py  test_pagination_debug.py  test_submissions.py  use_course_tools.py
