[tool.poetry]
name = "canvas-course-tools"
version = "0.10.2"
homepage = "https://github.com/davidfokkema/canvas-course-tools"
description = "Canvas course tools"
authors = ["David Fokkema <d.b.r.a.fokkema@vu.nl>"]
readme = "README.md"
packages = [{ include = "canvas_course_tools", from = "src" }]
license = "GPL-3.0-or-later"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python",
]


[tool.poetry.scripts]
canvas = "canvas_course_tools.cli:cli"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
appdirs = "^1.4.4"
rich = "^13.3.5"
canvasapi = "^3.2.0"
python-dateutil = "^2.8.1"
rich-click = "^1.5.2"
jinja2 = "^3.1.2"
tomli-w = "^1.0.0"
tomli = "^2.0.1"
trogon = "^0.5.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
