[project]
name = "canvas-course-tools"
version = "0.13.0.dev1"
description = "Canvas course tools"
readme = "README.md"
authors = [{ "name" = "David Fokkema", "email" = "davidfokkema@icloud.com" }]
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python",
]
dependencies = [
    "beautifulsoup4>=4.13.4",
    "canvasapi>=3.3.0",
    "click>=8.2.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "mistune>=3.1.3",
    "platformdirs>=4.3.8",
    "pydantic>=2.11.7",
    "python-slugify>=8.0.4",
    "rich>=14.0.0",
    "rich-click>=1.8.9",
    "tomli-w>=1.2.0",
    "trogon>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/davidfokkema/canvas-course-tools"
Documentation = "https://github.com/davidfokkema/canvas-course-tools/blob/main/README.md"
Repository = "https://github.com/davidfokkema/canvas-course-tools.git"
Issues = "https://github.com/davidfokkema/canvas-course-tools/issues"
Changelog = "https://github.com/davidfokkema/canvas-course-tools/blob/main/CHANGELOG.md"


[project.scripts]
canvas = "canvas_course_tools.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["ipython>=9.3.0"]
